--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,10 +1,29 @@
-h1{
-    text-align: center;
+.main{
+    max-width: 1350px;
+    margin: 0 auto;
 }
 
-.home__link{
-    display: block;
-    text-align: center;
-    font-size: 30px;
-    padding: 100px;
+.banner-container{
+    position: relative;
+}
+
+.bannerimage-container{
+    max-width: 100%;
+}
+
+.banner-image{
+    width: 100%;
+}
+
+.login-button{
+    padding: 13px 40px;
+    background-color: #19333eb3;
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translateX(-50%);
+    border: 1px solid white;
 }
