--- a/src/components/Login/LoginForm.css
+++ b/src/components/Login/LoginForm.css
@@ -18,7 +18,7 @@
     border-radius: 5px;
     justify-content: center;
     row-gap: 5px;
-    padding: 75px 75px 75px 75px;
+    padding: 50px 75px;
     box-shadow: 0.1px 0.1px 5px 3px #d5d5d5;
 }
 
@@ -29,7 +29,6 @@
     font-size: 15px;
     border: none;
     box-shadow: inset 0 0 2px rgb(104, 104, 104);
-    margin-bottom: 20px;
 }
 
 .loginBtn{
@@ -48,9 +47,18 @@
 }
 
 .login__noerror{
+    color: black;
     visibility: hidden;
 }
 
 .login__error{
     color: red;
+}
+
+.empty_loginEmail{
+    display: none;
+}
+
+.empty_loginPassword{
+    display: none;
 }
