--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,7 @@
+.header{
+    background-color: rgb(62, 62, 62);
+}
+
 .header__container{
     background-color: rgb(62, 62, 62);
     display: flex;
