--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
     background-color: rgb(62, 62, 62);
 }
 
-.header__container{
+.header-container{
     background-color: rgb(62, 62, 62);
     display: flex;
     height: 100px;
@@ -10,7 +10,7 @@
     margin: 0 auto;
 }
 
-.app__title{
+.app-title{
     color: white;
     font-size: 30px;
     display: flex;
