--- a/src/components/Header/HomeHeader.css
+++ b/src/components/Header/HomeHeader.css
@@ -1,4 +1,4 @@
-.header__container{
+.header-container{
     background-color: rgb(62, 62, 62);
     display: flex;
     height: 70px;
@@ -6,7 +6,7 @@
     margin: 0 auto;
 }
 
-.app__title{
+.app-title{
     color: white;
     font-size: 30px;
     display: flex;
