--- a/src/components/Login/UserForm.css
+++ b/src/components/Login/UserForm.css
@@ -1,15 +1,16 @@
 .form-container{
     background-color: rgb(255, 255, 255);
     max-width: 1350px;
-    margin: 50px auto;
+    margin: 0 auto;
     display: grid;
     justify-items: center;
-    padding: 50px 0px;
+    padding: 100px 0px;
 }
 
 .head{
+    text-align: center;
     font-size: 20px;
-    font-weight: 400;
+    font-weight: bold;
     margin-bottom: 20px;
 }
 
@@ -23,7 +24,7 @@
     box-shadow: 0.1px 0.1px 5px 3px #d5d5d5;
 }
 
-.input__box {
+.input-box {
     height: 30px;
     width: 400px;
     padding: 10px 10px;
@@ -32,26 +33,15 @@
     box-shadow: inset 0 0 2px rgb(104, 104, 104);
 }
 
-.loginBtn{
-    background-color: #28a745;
-    color: white;
-    padding: 10px 10px;
-    width: 400px;
-    font-weight: bold;
-    font-size: 18px;
-    border: none;
-    cursor: pointer;
+.signup-text{
+    margin-top: 10px;
+    text-align: center;
 }
 
-.signup__text{
-    margin: 10px;
+.input-error{
+    color: blue;
 }
 
-.login__noerror{
-    color: black;
-    visibility: hidden;
-}
-
-.login__error{
+.result-error{
     color: red;
 }
