--- a/src/components/Products/ProductCard.css
+++ b/src/components/Products/ProductCard.css
@@ -1,4 +1,4 @@
-.product__card{
+.product-card{
     width: 280px;
     background-color: white;
     padding: 20px;
@@ -8,11 +8,13 @@
     box-shadow: 0.1px 0.1px 10px 5px #d5d5d5;
 }
 
-.product__head{
+.product-head{
     text-align: center;
+    min-height: 35px;
+    font-size: 18px;
 }
 
-.productimage__container{
+.productimage-container{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,16 +22,11 @@
     min-height: 130px;
 }
 
-.product__image{
+.product-image{
     max-width: 100%;
 }
 
 .price{
     font-weight: bold;
-}
-
-.product__description{
-    font-size: 12px;
-    margin-bottom: 10px;
-    text-align: justify;
+    margin-bottom: 20px;
 }
