--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -54,3 +54,16 @@
 .nav li:hover{
     background-color: rgba(88, 88, 88, 0.716);
 }
+
+.cart-count{
+    background-color: rgb(236, 65, 65);
+    margin-left: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    font-weight: bold;
+}
