--- a/src/components/Products/ProductsDisplay.css
+++ b/src/components/Products/ProductsDisplay.css
@@ -8,3 +8,42 @@
     gap: 10px;
     padding: 50px 0px;
 }
+
+.product-card{
+    width: 300px;
+    background-color: white;
+    padding: 20px;
+    display: grid;
+    place-items: center;
+    gap: 10px;
+    box-shadow: 0.1px 0.1px 10px 5px #d5d5d5;
+    position: relative;
+}
+
+.product-card:hover{
+    transform: scale(1.02,1.02)
+}
+
+.product-head{
+    margin-top: 25px;
+    text-align: center;
+    min-height: 35px;
+    font-size: 18px;
+}
+
+.productimage-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 75px;
+    min-height: 130px;
+}
+
+.product-image{
+    max-width: 100%;
+}
+
+.price{
+    font-weight: bold;
+    margin-bottom: 20px;
+}
