--- a/src/components/Buttons/CartButtons/UpdateCartButton.css
+++ b/src/components/Buttons/CartButtons/UpdateCartButton.css
@@ -44,19 +44,22 @@
     position: absolute;
     top: 3%;
     right: 3%;
-    background-color: red;
+    background-color: white;
     width: 33px;
     height: 33px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 50%;
-    border: none;
-    color: white;
+    border: 2px solid red;
+    color: red;
     font-size: 20px;
     cursor: pointer;
 }
 
 .remove-cart-button:hover{
-    background-color: white;
-    color: red;
+    background-color: red;
+    color: white;
     border: 2px solid red;
 
 }
