--- a/src/components/Wishlist/WishlistPage.css
+++ b/src/components/Wishlist/WishlistPage.css
@@ -25,6 +25,10 @@
     position: relative;
 }
 
+.wishlist-item:hover{
+    transform: scale(1.02,1.02)
+}
+
 .cart-details{
     display: flex;
     flex-direction: column;
