added admin features

--- a/src/components/Cart/CartPage.css
+++ b/src/components/Cart/CartPage.css
@@ -1,5 +1,5 @@
 .cart-items-container{
-    margin-top: 20px;
+    margin-top: 80px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -37,4 +37,15 @@
 
 .checkout-button:hover{
     background-color: green;
+}
+
+.empty-cart-image-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 75px;
+}
+
+.empty-cart-image{
+    max-width: 100%;
 }
