--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,8 @@
 .header{
     background-color: rgb(62, 62, 62);
+    position: fixed;
+    z-index: 100;
+    width: 100%;
 }
 
 .header-container{
@@ -69,4 +72,8 @@
     align-items: center;
     font-size: 15px;
     font-weight: bold;
+}
+
+.customer-name{
+    color: white;
 }
