--- a/src/components/Products/ProductsDisplay.css
+++ b/src/components/Products/ProductsDisplay.css
@@ -19,6 +19,7 @@
     gap: 10px;
     box-shadow: 0.1px 0.1px 10px 5px #d5d5d5;
     position: relative;
+    border: none;
 }
 
 .product-card:hover{
@@ -33,6 +34,8 @@
 }
 
 .productimage-container{
+    all: unset;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
