--- a/src/components/Products/ProductsDisplay.css
+++ b/src/components/Products/ProductsDisplay.css
@@ -1,20 +1,43 @@
+.search-box-container{
+    display: flex;
+    width: 1350px;
+    margin: 0 auto;
+    background-color: rgb(242, 242, 242);
+    justify-content: center;
+    align-content: center;
+    padding: 10px 0px;
+    position: sticky;
+    top: 80px;
+    z-index: 99;
+}
+
+.search-box{
+    height: 50px;
+    width: 500px;
+    font-size: 15px;
+    padding: 0px 20px;
+    border: none;
+    border-radius: 50px;
+}
+
 .products-container{
     max-width: 1350px;
-    min-height: 80vh;
     margin: 0 auto;
-    margin-top: 20px;
     display: flex;
     justify-content: center;
+    align-content: baseline;
     flex-wrap: wrap;
     gap: 10px;
-    padding: 50px 0px;
+    padding: 15px 0px;
 }
 
 .product-card{
-    width: 300px;
+    width: 320px;
+    height: 340px;
     background-color: white;
     padding: 20px;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     place-items: center;
     gap: 10px;
     box-shadow: 0.1px 0.1px 10px 5px #d5d5d5;
@@ -27,9 +50,8 @@
 }
 
 .product-head{
-    margin-top: 25px;
+    margin: 20px 0px;
     text-align: center;
-    min-height: 35px;
     font-size: 18px;
 }
 
@@ -39,8 +61,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 75px;
-    min-height: 130px;
+    width: 75px;
+    height: 100px;
 }
 
 .product-image{
