--- a/src/components/Wishlist/WishlistPage.css
+++ b/src/components/Wishlist/WishlistPage.css
@@ -15,10 +15,15 @@
     gap: 10px;
 }
 
+.product-head{
+    min-height: 40px;
+}
+
 .wishlist-item{
     width: 300px;
+    height: 300px;
     background-color: white;
-    padding: 20px;
+    padding: 40px;
     display: grid;
     place-items: center;
     gap: 10px;
