--- a/src/components/Products/ProductsDisplay.css
+++ b/src/components/Products/ProductsDisplay.css
@@ -39,7 +39,9 @@
 
 .filter-sort-container{
     display: flex;
-    gap: 30px;
+    column-gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .sort-filter,
@@ -147,5 +149,8 @@
     .option-container{
         display: flex;
         flex-direction: column;
+    }
+    .search-box{
+        min-width: 300px;
     }
   }
