--- a/src/components/Products/ViewProduct.css
+++ b/src/components/Products/ViewProduct.css
@@ -1,6 +1,7 @@
 .product-details-container {
     display: flex;
     align-items: flex-start;
+    flex-wrap: wrap;
     justify-content: center;
     max-width: 1350px;
     padding: 170px;
