--- a/src/components/Cart/CartPage.css
+++ b/src/components/Cart/CartPage.css
@@ -13,8 +13,16 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     min-height: 90vh;
+}
+
+.api-error-message{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-size: 50px;
 }
 
 .cart-details{
