--- a/src/components/Buttons/WishlistButtons/WishlistButton.css
+++ b/src/components/Buttons/WishlistButtons/WishlistButton.css
@@ -31,3 +31,17 @@
     box-shadow: 0.1px 0.1px 5px 1px #d5d5d5;
     cursor: pointer;
 }
+
+.tooltiptext{
+    background-color: rgb(255, 51, 0);
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    gap: 5px;
+    color: white;
+    position: absolute;
+    right: 60px;
+    top: 13px;
+    padding: 5px 10px;
+    border-radius: 10px;
+}
